[c] Fix TRR map distortion

--- a/src/js/components/trr-page/trr-info-section/trr-location/trr-map.sass
+++ b/src/js/components/trr-page/trr-info-section/trr-location/trr-map.sass
@@ -6,4 +6,4 @@
 
 \:local(.trr-print-map)
   width: 100%
-  height: 394px
+  display: block
